tools/tests/errors/list_remove_absent.ki
discard [1, 2].remove(9)
